--- a/client/src/components/Hero/style.css
+++ b/client/src/components/Hero/style.css
@@ -14,6 +14,9 @@
   height: 700px;
   color: white;
   text-align: left;
+  display: flex;
+ flex-direction: column;
+ margin-top: 56px;
 }
 
 /* img {
