--- a/client/src/components/Wrapper/style.css
+++ b/client/src/components/Wrapper/style.css
@@ -1,6 +1,10 @@
 .wrapper {
-  /* min-height: 100%;
-  padding-bottom: 300px; */
- 
-  width: 100%;
+ display: flex;
+ flex-direction: column;
+
+ /* margin-top: 800px; */
+ /* overflow-y: scroll;
+ scroll-snap-type: mandatory;
+ scroll-snap-points-y: repeat (3rem);
+ scroll-snap-type: y mandatory; */
 }
