--- a/client/src/components/NavBar/style.css
+++ b/client/src/components/NavBar/style.css
@@ -1,66 +1,44 @@
 /* nav.navbar.navbar-default {
     margin-bottom: 0;
   } */
-  
-nav{
+
+nav {
   margin-bottom: 70px;
 }
 
-  .navbar-brand {
-    color: white;
-  }
-  
-  .nav-link {
-    color: white;
-  }
-  
-  .dropdown{
-    color: white;
-    float: right;
-    margin-left: 550px;
-    padding-right: 30px;
-  }
-  
-  .dropdown input[type=text]{
-    width: 300px;
-    color: black;
-    padding-bottom: 20px;
-  }
-  
-  /* .dropdown button {
+.navbar-brand {
+  color: white;
+}
+
+.nav-link {
+  color: white;
+}
+
+.dropdown {
+  color: white;
+  float: right;
+  margin-left: 550px;
+  padding-right: 60px;
+}
+
+.dropdown input[type="text"] {
+  width: 300px;
+  color: black;
+  padding-bottom: 20px;
+}
+
+/* .dropdown button {
     box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
   } */
-  
-  .dropdown label {
-    font-weight: bold;
-  }
-  
-  .dictionary-btn {
-    margin-top: 5px;
-  }
-  
-  .dropdown textarea {
-    height: 200px;
-  }
 
+.dropdown label {
+  font-weight: bold;
+}
 
+.dictionary-btn {
+  margin-top: 5px;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.dropdown textarea {
+  height: 200px;
+}
