working dic with key on .env and query on server

--- a/client/src/components/NavBar/style.css
+++ b/client/src/components/NavBar/style.css
@@ -17,7 +17,8 @@ nav {
 .dropdown {
   color: white;
   float: right;
-  margin-left: 550px;
+  /* margin-left: 550px; */
+  margin: 50%;
   padding-right: 60px;
 }
 
