working sign up and sign in auth, email pswd validate, added journey css

--- a/client/src/components/Form/style.css
+++ b/client/src/components/Form/style.css
@@ -1,3 +1,17 @@
+iframe {
+  border: 5px solid black;
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+}
+
+.what-are-lds {
+  padding-bottom: 9rem;
+}
+
+.coping-container {
+  padding-top: 8rem;
+  padding-bottom: 8rem;
+}
+
 .search-btn {
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
   margin-top: 20px;
@@ -111,7 +125,7 @@
 
 .user-search {
   background: #ffffff;
-  padding-top: 14rem;
+  padding-top: 6rem;
   padding-bottom: 8rem;
   text-align: center;
   align-items: center;
