adding logut, updating css for signIn, signUp and journey

--- a/client/src/components/Wrapper/style.css
+++ b/client/src/components/Wrapper/style.css
@@ -1,9 +1,10 @@
 .wrapper {
- display: flex;
- flex-direction: column;
+  display: flex;
+  flex-direction: column;
+  height: 300%;
 
- /* margin-top: 800px; */
- /* overflow-y: scroll;
+  /* margin-top: 800px; */
+  /* overflow-y: scroll;
  scroll-snap-type: mandatory;
  scroll-snap-points-y: repeat (3rem);
  scroll-snap-type: y mandatory; */
