--- a/client/src/components/Form/style.css
+++ b/client/src/components/Form/style.css
@@ -7,11 +7,6 @@ iframe {
   padding-bottom: 9rem;
 }
 
-.coping-container {
-  padding-top: 8rem;
-  padding-bottom: 8rem;
-}
-
 .search-btn {
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
   margin-top: 20px;
@@ -121,6 +116,25 @@ iframe {
 .disability-card:hover {
   filter: brightness(115%);
   transform: scale(1.05);
+}
+
+.coping-container {
+  padding-top: 8rem;
+  padding-bottom: 8rem;
+
+  /* display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around; */
+}
+
+/* .list-group {
+  width: 40rem;
+} */
+
+.list-group-item {
+  border: 5px solid;
+  background-color: #2e3192;
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
 }
 
 .user-search {
