--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -1,18 +1,19 @@
 .footer {
-  min-height: 100px;
+  min-height: 10px;
   background: #E5E5E5;
-  position: relative;
+  position: fixed;
  
 }
 
 .footer span {
-  position: absolute;
+  /* position: absolute; */
   bottom: 0;
   left: 0;
   right: 0;
   padding: 3px;
   background: #B8B8B8;
   color: white;
+  position: fixed;
 }
 
 footer a {
