--- a/client/src/components/LoginModal/style.css
+++ b/client/src/components/LoginModal/style.css
@@ -1,6 +1,6 @@
 /* Cited React Login Modal: https://www.npmjs.com/package/react-login-modal-sm */
 
-.login-btn {
+/* .login-btn {
   transform: translate(-50%, 0);
   outline: none;
-}
+} */
