--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -1,9 +1,9 @@
-.footer {
+/* .footer {
   min-height: 100px;
   background: #E5E5E5;
   position: relative;
  
-}
+} */
 
 .footer span {
   position: absolute;
@@ -11,12 +11,10 @@
   left: 0;
   right: 0;
   padding: 3px;
-  background: #B8B8B8;
+  background: #b8b8b8;
   color: white;
 }
 
 footer a {
   color: white;
 }
-
-
