--- a/client/src/components/Form/style.css
+++ b/client/src/components/Form/style.css
@@ -118,25 +118,6 @@ iframe {
   transform: scale(1.05);
 }
 
-.coping-container {
-  padding-top: 8rem;
-  padding-bottom: 8rem;
-
-  /* display: flex;
-  flex-flow: row wrap;
-  justify-content: space-around; */
-}
-
-/* .list-group {
-  width: 40rem;
-} */
-
-.list-group-item {
-  border: 5px solid;
-  background-color: #2e3192;
-  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
-}
-
 .user-search {
   background: #ffffff;
   padding-top: 6rem;
@@ -144,4 +125,428 @@ iframe {
   text-align: center;
   align-items: center;
   align-content: center;
+}
+
+.coping-container {
+  padding-top: 8rem;
+  padding-bottom: 8rem;
+  /* align-items: center;
+  align-content: center; */
+  /* display: flex; */
+  flex-flow: row wrap;
+  justify-content: space-around;
+}
+
+.cope-btn {
+  margin-right: 30px;
+}
+
+.list-group-item {
+  border: 5px solid;
+  background-color: #2e3192;
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+}
+
+/* The Learning To Cope Slider */
+
+/* * {
+  box-sizing: border-box;
+} */
+
+.slider-cope {
+  width: 800px;
+  text-align: center;
+  overflow: hidden;
+  /* display: flex; */
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  z-index: 1;
+  margin-left: 100px;
+}
+
+.slides {
+  display: flex;
+  overflow-x: scroll;
+  scroll-snap-type: x mandatory;
+  scroll-snap-align: center;
+  scroll-behavior: smooth;
+  -webkit-overflow-scrolling: touch;
+}
+.slides::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+.slides::-webkit-scrollbar-thumb {
+  background: black;
+  border-radius: 10px;
+}
+.slides::-webkit-scrollbar-track {
+  background: transparent;
+}
+.slides > div {
+  scroll-snap-align: start;
+  flex-shrink: 0;
+  width: 800px;
+  height: 400px;
+  margin-left: 50px;
+  border-radius: 10px;
+  padding-top: 60px;
+  /* background: #eee; */
+  background-color: #2e3192;
+  border: 5px solid;
+  transform-origin: center center;
+  transform: scale(1);
+  /* transition: transform 0.5s; */
+  transition: height 0.66s ease-out;
+  /* overflow: hidden; */
+  position: relative;
+  /* display: flex; */
+  justify-content: center;
+  align-items: center;
+  font-size: 100px;
+  overflow: hidden;
+}
+
+/* .author-info {
+  background: rgba(0, 0, 0, 0.75);
+  color: white;
+  padding: 0.75rem;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  margin: 0;
+}
+.author-info a {
+  color: white;
+} */
+/* img {
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+} */
+
+.slider-cope > a {
+  display: inline-flex;
+  width: 2.5rem;
+  height: 2.5rem;
+  background: white;
+  text-decoration: none;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  margin: 0 0 0.5rem 0;
+  padding-right: 60px;
+  position: relative;
+}
+/* .slider-cope > a:active {
+  top: 1px;
+} */
+.slider-cope > a:focus {
+  outline: 0;
+}
+
+/* .slider > a:hover {
+  background-color: rgb(206, 218, 45);
+ 
+} */
+
+/* Don't need button navigation */
+@supports (scroll-snap-type) {
+  .slider-cope > a {
+    display: none;
+  }
+}
+
+/* Example Slider 2 */
+.csslider {
+  -moz-perspective: 1300px;
+  -ms-perspective: 1300px;
+  -webkit-perspective: 1300px;
+  perspective: 1300px;
+  display: inline-block;
+  text-align: center;
+  position: relative;
+  margin-bottom: 22px;
+  /* margin-left: 100px; */
+  scroll-behavior: smooth;
+  -webkit-overflow-scrolling: touch;
+  justify-content: center;
+  align-items: center;
+}
+.csslider > input {
+  display: none;
+}
+.csslider > input:nth-of-type(10):checked ~ ul li:first-of-type {
+  margin-left: -900%;
+}
+.csslider > input:nth-of-type(9):checked ~ ul li:first-of-type {
+  margin-left: -800%;
+}
+.csslider > input:nth-of-type(8):checked ~ ul li:first-of-type {
+  margin-left: -700%;
+}
+.csslider > input:nth-of-type(7):checked ~ ul li:first-of-type {
+  margin-left: -600%;
+}
+.csslider > input:nth-of-type(6):checked ~ ul li:first-of-type {
+  margin-left: -500%;
+}
+.csslider > input:nth-of-type(5):checked ~ ul li:first-of-type {
+  margin-left: -400%;
+}
+.csslider > input:nth-of-type(4):checked ~ ul li:first-of-type {
+  margin-left: -300%;
+}
+.csslider > input:nth-of-type(3):checked ~ ul li:first-of-type {
+  margin-left: -200%;
+}
+.csslider > input:nth-of-type(2):checked ~ ul li:first-of-type {
+  margin-left: -100%;
+}
+.csslider > input:nth-of-type(1):checked ~ ul li:first-of-type {
+  margin-left: 0%;
+}
+.csslider > ul {
+  position: relative;
+  width: 820px;
+  height: 420px;
+  z-index: 1;
+  font-size: 0;
+  line-height: 0;
+  background-color: #2e3192;
+  border: 15px solid #2e3192;
+  border-radius: 10px;
+  margin: 0 auto;
+  padding: 0;
+  padding-top: 40px;
+  overflow: hidden;
+  white-space: nowrap;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  align-content: center;
+  align-items: center;
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+}
+.csslider > ul > li {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  font-size: 15px;
+  font-size: initial;
+  line-height: normal;
+  /* -moz-transition: all 0.5s cubic-bezier(0.4, 1.3, 0.65, 1);
+  -o-transition: all 0.5s ease-out;
+  -webkit-transition: all 0.5s cubic-bezier(0.4, 1.3, 0.65, 1);
+  transition: all 0.5s cubic-bezier(0.4, 1.3, 0.65, 1); */
+  -webkit-transition: all 1s ease-in-out;
+  -moz-transition: all 1s ease-in-out;
+  -o-transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  -webkit-background-size: cover;
+  background-size: cover;
+  vertical-align: top;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  white-space: normal;
+  scroll-behavior: smooth;
+  -webkit-overflow-scrolling: touch;
+}
+.csslider > ul > li.scrollable {
+  overflow-y: scroll;
+}
+.csslider > .navigation {
+  position: absolute;
+  bottom: -8px;
+  left: 50%;
+  z-index: 10;
+  margin-bottom: -10px;
+  font-size: 0;
+  line-height: 0;
+  text-align: center;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+}
+.csslider > .navigation > div {
+  margin-left: -100%;
+}
+.csslider > .navigation label {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  border-radius: 50%;
+  margin: -10px 10px;
+
+  padding: 10px;
+  color: white;
+  background: #3a3a3a;
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+}
+.csslider > .navigation label:hover:after {
+  opacity: 1;
+}
+.csslider > .navigation label:after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-left: -6px;
+  margin-top: -6px;
+  background: #17a2b8;
+  border-radius: 50%;
+  padding: 10px;
+  opacity: 0;
+}
+.csslider > .arrows {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.csslider.inside .navigation {
+  bottom: 10px;
+  margin-bottom: 10px;
+}
+.csslider.inside .navigation label {
+  border: 1px solid #7e7e7e;
+}
+.csslider
+  > input:nth-of-type(1):checked
+  ~ .navigation
+  label:nth-of-type(1):after,
+.csslider
+  > input:nth-of-type(2):checked
+  ~ .navigation
+  label:nth-of-type(2):after,
+.csslider
+  > input:nth-of-type(3):checked
+  ~ .navigation
+  label:nth-of-type(3):after,
+.csslider
+  > input:nth-of-type(4):checked
+  ~ .navigation
+  label:nth-of-type(4):after,
+.csslider
+  > input:nth-of-type(5):checked
+  ~ .navigation
+  label:nth-of-type(5):after,
+.csslider
+  > input:nth-of-type(6):checked
+  ~ .navigation
+  label:nth-of-type(6):after,
+.csslider
+  > input:nth-of-type(7):checked
+  ~ .navigation
+  label:nth-of-type(7):after,
+.csslider
+  > input:nth-of-type(8):checked
+  ~ .navigation
+  label:nth-of-type(8):after,
+.csslider
+  > input:nth-of-type(9):checked
+  ~ .navigation
+  label:nth-of-type(9):after,
+.csslider
+  > input:nth-of-type(10):checked
+  ~ .navigation
+  label:nth-of-type(10):after,
+.csslider
+  > input:nth-of-type(11):checked
+  ~ .navigation
+  label:nth-of-type(11):after {
+  opacity: 1;
+}
+.csslider > .arrows {
+  position: absolute;
+  left: -31px;
+  top: 50%;
+  width: 100%;
+  height: 26px;
+  padding: 0 31px;
+  z-index: 1;
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+  box-sizing: content-box;
+}
+.csslider > .arrows label {
+  display: none;
+  position: absolute;
+  top: -50%;
+  padding: 13px;
+  box-shadow: inset 2px -2px 0 1px #3a3a3a;
+  cursor: pointer;
+  -moz-transition: 0.15s;
+  -o-transition: 0.15s;
+  -webkit-transition: 0.15s;
+  transition: 0.15s;
+}
+.csslider > .arrows label:hover {
+  box-shadow: inset 3px -3px 0 2px #17a2b8;
+  margin: 0 0px;
+}
+.csslider > .arrows label:before {
+  /* content: ""; */
+  position: absolute;
+  top: -100%;
+  left: -100%;
+  height: 300%;
+  width: 300%;
+}
+.csslider.infinity > input:first-of-type:checked ~ .arrows label:last-of-type,
+.csslider > input:nth-of-type(1):checked ~ .arrows label:nth-of-type(0),
+.csslider > input:nth-of-type(2):checked ~ .arrows label:nth-of-type(1),
+.csslider > input:nth-of-type(3):checked ~ .arrows label:nth-of-type(2),
+.csslider > input:nth-of-type(4):checked ~ .arrows label:nth-of-type(3),
+.csslider > input:nth-of-type(5):checked ~ .arrows label:nth-of-type(4),
+.csslider > input:nth-of-type(6):checked ~ .arrows label:nth-of-type(5),
+.csslider > input:nth-of-type(7):checked ~ .arrows label:nth-of-type(6),
+.csslider > input:nth-of-type(8):checked ~ .arrows label:nth-of-type(7),
+.csslider > input:nth-of-type(9):checked ~ .arrows label:nth-of-type(8),
+.csslider > input:nth-of-type(10):checked ~ .arrows label:nth-of-type(9),
+.csslider > input:nth-of-type(11):checked ~ .arrows label:nth-of-type(10) {
+  display: block;
+  left: 0;
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+.csslider.infinity > input:last-of-type:checked ~ .arrows label:first-of-type,
+.csslider > input:nth-of-type(1):checked ~ .arrows label:nth-of-type(2),
+.csslider > input:nth-of-type(2):checked ~ .arrows label:nth-of-type(3),
+.csslider > input:nth-of-type(3):checked ~ .arrows label:nth-of-type(4),
+.csslider > input:nth-of-type(4):checked ~ .arrows label:nth-of-type(5),
+.csslider > input:nth-of-type(5):checked ~ .arrows label:nth-of-type(6),
+.csslider > input:nth-of-type(6):checked ~ .arrows label:nth-of-type(7),
+.csslider > input:nth-of-type(7):checked ~ .arrows label:nth-of-type(8),
+.csslider > input:nth-of-type(8):checked ~ .arrows label:nth-of-type(9),
+.csslider > input:nth-of-type(9):checked ~ .arrows label:nth-of-type(10),
+.csslider > input:nth-of-type(10):checked ~ .arrows label:nth-of-type(11),
+.csslider > input:nth-of-type(11):checked ~ .arrows label:nth-of-type(12) {
+  display: block;
+  right: 0;
+  -moz-transform: rotate(225deg);
+  -ms-transform: rotate(225deg);
+  -o-transform: rotate(225deg);
+  -webkit-transform: rotate(225deg);
+  transform: rotate(225deg);
 }
