corrected username on NavBar, nav buttons on cope, about css and ytube css

--- a/client/src/components/GoogleEngine/style.css
+++ b/client/src/components/GoogleEngine/style.css
@@ -2,6 +2,10 @@
   width: 70%;
   margin-left: 18%;
   margin-right: 12%;
-  padding-bottom: 13rem;
+  padding-bottom: 15rem;
+}
 
+.google {
+  padding-top: 2rem;
+  padding-bottom: 9rem;
 }
