--- a/client/src/components/NavBar/style.css
+++ b/client/src/components/NavBar/style.css
@@ -1,7 +1,3 @@
-/* nav.navbar.navbar-default {
-    margin-bottom: 0;
-  } */
-
 nav {
   margin-bottom: 70px;
 }
@@ -12,6 +8,7 @@ nav {
 
 .nav-link {
   color: white;
+  margin-top: 7px;
 }
 
 .dropdown {
