--- a/client/src/components/Form/style.css
+++ b/client/src/components/Form/style.css
@@ -39,11 +39,8 @@ iframe {
   padding: 20px;
   justify-content: space-around;
   align-content: flex-start;
-  /* background: rgb(236, 243, 245); */
   padding-top: 3rem;
-  /* padding-bottom: 12rem; */
   width: 400%;
-  /* margin: 1rem; */
 }
 
 .card .btn {
@@ -129,7 +126,7 @@ iframe {
 
 .coping-container {
   padding-top: 8rem;
-  padding-bottom: 8rem;
+  padding-bottom: 13rem;
   /* align-items: center;
   align-content: center; */
   /* display: flex; */
@@ -148,122 +145,8 @@ iframe {
 }
 
 /* The Learning To Cope Slider */
+/* Cited: https://github.com/drygiel/csslider/blob/master/examples/themes/csslider.light.css */
 
-/* * {
-  box-sizing: border-box;
-} */
-
-.slider-cope {
-  width: 800px;
-  text-align: center;
-  overflow: hidden;
-  /* display: flex; */
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
-  z-index: 1;
-  margin-left: 100px;
-}
-
-.slides {
-  display: flex;
-  overflow-x: scroll;
-  scroll-snap-type: x mandatory;
-  scroll-snap-align: center;
-  scroll-behavior: smooth;
-  -webkit-overflow-scrolling: touch;
-}
-.slides::-webkit-scrollbar {
-  width: 10px;
-  height: 10px;
-}
-.slides::-webkit-scrollbar-thumb {
-  background: black;
-  border-radius: 10px;
-}
-.slides::-webkit-scrollbar-track {
-  background: transparent;
-}
-.slides > div {
-  scroll-snap-align: start;
-  flex-shrink: 0;
-  width: 800px;
-  height: 400px;
-  margin-left: 50px;
-  border-radius: 10px;
-  padding-top: 60px;
-  /* background: #eee; */
-  background-color: #2e3192;
-  border: 5px solid;
-  transform-origin: center center;
-  transform: scale(1);
-  /* transition: transform 0.5s; */
-  transition: height 0.66s ease-out;
-  /* overflow: hidden; */
-  position: relative;
-  /* display: flex; */
-  justify-content: center;
-  align-items: center;
-  font-size: 100px;
-  overflow: hidden;
-}
-
-/* .author-info {
-  background: rgba(0, 0, 0, 0.75);
-  color: white;
-  padding: 0.75rem;
-  text-align: center;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  margin: 0;
-}
-.author-info a {
-  color: white;
-} */
-/* img {
-  object-fit: cover;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-} */
-
-.slider-cope > a {
-  display: inline-flex;
-  width: 2.5rem;
-  height: 2.5rem;
-  background: white;
-  text-decoration: none;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  margin: 0 0 0.5rem 0;
-  padding-right: 60px;
-  position: relative;
-}
-/* .slider-cope > a:active {
-  top: 1px;
-} */
-.slider-cope > a:focus {
-  outline: 0;
-}
-
-/* .slider > a:hover {
-  background-color: rgb(206, 218, 45);
- 
-} */
-
-/* Don't need button navigation */
-@supports (scroll-snap-type) {
-  .slider-cope > a {
-    display: none;
-  }
-}
-
-/* Example Slider 2 */
 .csslider {
   -moz-perspective: 1300px;
   -ms-perspective: 1300px;
@@ -278,6 +161,7 @@ iframe {
   -webkit-overflow-scrolling: touch;
   justify-content: center;
   align-items: center;
+  scroll-snap-align: start;
 }
 .csslider > input {
   display: none;
@@ -343,10 +227,6 @@ iframe {
   font-size: 15px;
   font-size: initial;
   line-height: normal;
-  /* -moz-transition: all 0.5s cubic-bezier(0.4, 1.3, 0.65, 1);
-  -o-transition: all 0.5s ease-out;
-  -webkit-transition: all 0.5s cubic-bezier(0.4, 1.3, 0.65, 1);
-  transition: all 0.5s cubic-bezier(0.4, 1.3, 0.65, 1); */
   -webkit-transition: all 1s ease-in-out;
   -moz-transition: all 1s ease-in-out;
   -o-transition: all 1s ease-in-out;
@@ -365,10 +245,13 @@ iframe {
 }
 .csslider > ul > li.scrollable {
   overflow-y: scroll;
+  scroll-behavior: smooth;
+  -webkit-overflow-scrolling: touch;
 }
 .csslider > .navigation {
   position: absolute;
-  bottom: -8px;
+  bottom: -25px;
+  /* top: -25px; */
   left: 50%;
   z-index: 10;
   margin-bottom: -10px;
@@ -392,9 +275,9 @@ iframe {
   cursor: pointer;
   border-radius: 50%;
   margin: -10px 10px;
-
-  padding: 10px;
+  padding: 15px;
   color: white;
+  font-size: 20px;
   background: #3a3a3a;
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
 }
@@ -406,11 +289,11 @@ iframe {
   position: absolute;
   left: 50%;
   top: 50%;
-  margin-left: -6px;
-  margin-top: -6px;
+  margin-left: -11px;
+  margin-top: -11px;
   background: #17a2b8;
-  border-radius: 50%;
-  padding: 10px;
+  border-radius: 80%;
+  padding: 12px;
   opacity: 0;
 }
 .csslider > .arrows {
@@ -503,7 +386,7 @@ iframe {
   margin: 0 0px;
 }
 .csslider > .arrows label:before {
-  /* content: ""; */
+  content: "";
   position: absolute;
   top: -100%;
   left: -100%;
